# setrise

./: Cargo.toml  LICENSE  README.md
examples/: .setriserc
examples/systemd/: setrise.service
src/: args.rs  config.rs  main.rs  schedule.rs  switch_to.rs  theme.rs
src/config/: command.rs  generic.rs  hot_reload.rs
